--- a/language/ca.json
+++ b/language/ca.json
@@ -239,6 +239,10 @@
           "description": "Display button for showing the scores from assignments."
         },
         {
+          "label": "Display \"Home\" button",
+          "description": "Display button for going to start scene."
+        },
+        {
           "label": "Qualitat de la renderització de l’escena",
           "description": "Trieu l’amplada i l’alçada que utilitzaran els segments per renderitzar una escena, ja que això influeix directament en la seva qualitat. Si una escena es veu pixelada o s’hi veuen ones, proveu d’augmentar-ne la qualitat. Tingueu en compte que les renderitzacions en alta qualitat tarden més a carregar-se.",
           "options": [
