--- a/language/nl.json
+++ b/language/nl.json
@@ -239,6 +239,10 @@
           "description": "Display button for showing the scores from assignments."
         },
         {
+          "label": "Display \"Home\" button",
+          "description": "Display button for going to start scene."
+        },
+        {
           "label": "Weergavekwaliteit van de scène",
           "description": "Kies het aantal breedte- en hoogtesegmenten dat wordt gebruikt om een scène te renderen. Dit heeft direct invloed op het kwaliteitsniveau van de scène. Probeer de kwaliteit te verhogen als een scène er \"blokkerig\" uitziet of dat er \"golven\" te zien zijn tussen de scènes. Let op dat bij het laden van een hogere kwaliteit het renderen meer tijd in beslag neemt.",
           "options": [
